--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="assets/favicon.png" type="image/png" />
     <title>Alivio</title>
   </head>
-  <body>
-     <svg>
-        <use href="assets/sprites.svg#logo-icon"></use>
-     </svg>
-  </body>
+     <body>
+      <header class="header" aria-label="header">
+        <div class="container">
+          <div class="header__wrapper">
+            <svg class="logo" aria-label="logo">
+              <use href="assets/sprites.svg#logo-icon"></use>
+           </svg>
+
+
+           <nav class="header__nav" aria-label="navigation">
+            <ul class="header__nav-list" aria-label="navigation list">
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Why Alivio</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Solutions</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Community</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Pricing</a>
+              </li>
+            </ul>
+           </nav>
+
+           <div class="header__actions">
+            <button type="button" class="btn btn--signin">Sign In</button>
+            <button type="button" class="btn">Start Trial</button>
+           </div>
+          </div>
+        </div>
+      </header>
+      </body>
 </html>
