--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <link rel="icon" href="assets/favicon.png" type="image/png" />
     <title>Alivio</title>
   </head>
-     <body>
-      <header class="header" aria-label="header">
-        <div class="container">
-          <div class="header__wrapper">
-            <svg class="logo" aria-label="logo">
-              <use href="assets/sprites.svg#logo-icon"></use>
-           </svg>
+  <body>
+    <header class="header" aria-label="header">
+      <div class="container">
+        <div class="header__wrapper">
+          <svg class="logo" aria-label="logo">
+            <use href="assets/sprites.svg#logo-icon"></use>
+          </svg>
 
-
-           <nav class="header__nav" aria-label="navigation">
+          <nav class="header__nav" aria-label="navigation">
             <ul class="header__nav-list" aria-label="navigation list">
               <li class="header__nav-item">
                 <a href="#" class="header__nav-link">Why Alivio</a>
@@ -37,58 +36,120 @@
                 <a href="#" class="header__nav-link">Pricing</a>
               </li>
             </ul>
-           </nav>
+          </nav>
 
-           <div class="header__actions">
+          <div class="header__actions">
             <button type="button" class="btn btn--signin">Sign In</button>
             <button type="button" class="btn">Start Trial</button>
-           </div>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
 
-        <main>
-          <section class="hero" aria-label="hero section">
-            <div class="container">
-              <div class="hero__content">
-              <h1 class="hero__title">Be aware, Manage well.</h1>
-                <p class="hero__desc" aria-label="main description">Everyone experiences stress in different ways.Let Alivio guide you, in a personalized journal experience, to overcome your stress</p>
-                <button type="button" class="btn">Find Your Way</button>
-              </div>
+    <main>
+      <section class="hero" aria-label="hero section">
+        <div class="container">
+          <div class="hero__content">
+            <h1 class="hero__title">Be aware, Manage well.</h1>
+            <p class="hero__desc" aria-label="main description">
+              Everyone experiences stress in different ways.Let Alivio guide
+              you, in a personalized journal experience, to overcome your stress
+            </p>
+            <button type="button" class="btn">Find Your Way</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="about" aria-label="" about section>
+        <div class="container">
+          <!-- <h3 class="about__subtitle">How it works</h3> -->
+
+          <div class="about__content">
+            <h2 class="about__title">
+              Understand & Release the stress in 3 steps
+            </h2>
+            <p class="about__desc">
+              Alivio offers as many journals it takes, tackling different areas
+              such as anxiety, overwhelmedness, sadness, or anger, and a variety
+              of personal causes, to help you become aware of your emotions, and
+              guide you in how to manage stress.
+            </p>
+          </div>
+
+          <div class="about__cards">
+            <figure class="card" aria-label="fist card">
+              <h3 class="card__title">Personalize</h3>
+              <p class="card__desc" aria-label="first card description">
+                Answer a quick survey about how you express yourself, what
+                causes you stress, and what area would you like to work on. This
+                way, we can fully personalize your journal!
+              </p>
+              <img
+                src="assets/webp/card_1.webp"
+                alt="card image 1"
+                class="card__img"
+              />
+            </figure>
+
+            <figure class="card" aria-label="second card">
+              <h3 class="card__title card__title--second cars__title--right">
+                Write & Understand
+              </h3>
+              <p class="card__desc" aria-label="first card description">
+                Write, draw, reflect, understand. Alivio will guide you through
+                the prompts and will help you manage your stress!
+              </p>
+              <img
+                src="assets/webp/card_2.webp"
+                alt="card image 2"
+                class="card__img"
+              />
+            </figure>
+
+            <figure class="card" aria-label="third card">
+              <h3 class="card__title card__title--third">Alivio!</h3>
+              <p class="card__desc" aria-label="first card description">
+                Now you are aware, and have a way to manage and overcome your
+                own stress. What are you waiting for? Alivio today!
+              </p>
+              <img
+                src="assets/webp/card_3.webp"
+                alt="card image 3"
+                class="card__img"
+              />
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="success">
+        <div class="container">
+          <div class="success__wrapper">
+            <div class="success__content">
+              <h3 class="success__title">
+                Let's hear about Kayla's success story
+              </h3>
+              <p class="success__desription">
+                See how well Alivio works in a real customer’s life.
+              </p>
+              <button class="btn">Let’s get started</button>
             </div>
-          </section>
 
-          <section class="about" aria-label=""about section>
-            <div class="container">
-              <!-- <h3 class="about__subtitle">How it works</h3> -->
+            <div class="success__content-video">
+              <img
+                src="assets/webp/video_cover.webp"
+                class="success__cover"
+                alt="video cover img"
+              />
 
-              <div class="about__content">
-                <h2 class="about__title">Understand & Release the stress in 3 steps</h2>
-                <p class="about__desc">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
-              </div>
-
-              <div class="about__cards">
-                <figure class="card" aria-label="fist card">
-                    <h3 class="card__title">Personalize</h3>
-                    <p class="card__desc" aria-label="first card description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
-                    <img src="assets/webp/card_1.webp" alt="card image 1" class="card__img">
-                </figure>
-
-                <figure class="card" aria-label="second card">
-                    <h3 class="card__title card__title--second cars__title--right">Write & Understand</h3>
-                    <p class="card__desc" aria-label="first card description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
-                    <img src="assets/webp/card_2.webp" alt="card image 2" class="card__img">
-                </figure>
-
-                <figure class="card" aria-label="third card">
-                    <h3 class="card__title card__title--third ">Alivio!</h3>
-                    <p class="card__desc" aria-label="first card description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
-                    <img src="assets/webp/card_3.webp" alt="card image 3" class="card__img">
-                </figure>
-              </div>
+              <svg class="success__play-icon" aria-label="play icon">
+                <use href="assets/sprites.svg#play-icon"></use>
+              </svg>
+              <div class="success__gradient"></div>
             </div>
-          </section>
-        </main>
-
-      </body>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
